Reparacion de CRUD adminstado, ejecucion dentro del visual stude y comentarios de los usuarios